fix(ui): fix text overflow on details card for bacenta details

--- a/web-react-ts/src/components/DisplayChurchDetails/DisplayChurchDetails.css
+++ b/web-react-ts/src/components/DisplayChurchDetails/DisplayChurchDetails.css
@@ -16,3 +16,7 @@
 .not-filled {
   color: var(--bad);
 }
+
+.btn-graphs {
+  height: 46px;
+}
