--- a/web-react-ts/src/components/card/DetailsCard.css
+++ b/web-react-ts/src/components/card/DetailsCard.css
@@ -10,10 +10,6 @@
   border-radius: 10px;
 }
 
-.card-heading {
-  font-size: 14px;
-}
-
 .card-detail {
   margin-bottom: 0px;
   font-size: 22px;
